# sgains

./: README.md  pyproject.toml
notebooks/: full_example.ipynb
notebooks/data/: solutions_files.txt  solutions_files_dd.txt  solutions_files_dd_l254871.txt  solutions_files_l246297.txt  solutions_files_l246309.txt
sgains/: __main__.py  plotter.py  processor.py  solutions.py
