[tool.poetry]
name = "sgains"
version = "0.1"
description = "Sagecal Gains Explorer"
authors = ["Kariuki Chege <jameskariuki31@gmail.com>"]
readme = "README.md"
packages = [{ include = "sgains" }]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
scipy = "^1.14.0"
numpy = "^1.3"
astropy = "^6.1.1"
python-casacore = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"